Fix client GC settings for Alpha 6